--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-<head>
-</head>
-<body>
-</body>
+    <head>
+    </head>
+
+    <body>
+        <p>Welcome to my site!</p>
+    </body>
 </html>
